--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "tsc && node dist/index.js",
     "start:dev": "nodemon index.js"
   },
   "author": "Nino Lopez",
@@ -13,9 +13,17 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
+    "inquirer": "^8.0.0",
     "nodemon": "^2.0.7",
     "ora": "^5.4.0",
     "prompt-sync": "^4.2.0",
+    "typescript": "^4.2.4",
     "util": "^0.12.3"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^7.3.1",
+    "@types/node": "^15.3.0",
+    "@types/prompt-sync": "^4.1.0",
+    "tslint": "^5.12.1"
   }
 }
