--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "oc-check",
+  "name": "easy-oc",
   "version": "1.0.0",
-  "description": "Quick check for OCP Clusters",
+  "description": "Quick tool for OCP Clusters",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/index.js",
-    "start:dev": "nodemon index.js"
+    "format": "prettier --config .prettierrc '*.ts' --write",
+    "lint": "eslint ."
   },
   "author": "Nino Lopez",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
-    "chalk": "^4.1.1",
+    "eslint-config-airbnb": "^18.2.1",
     "inquirer": "^8.0.0",
-    "nodemon": "^2.0.7",
-    "ora": "^5.4.0",
-    "prompt-sync": "^4.2.0",
+    "readline-sync": "^1.4.10",
     "typescript": "^4.2.4",
     "util": "^0.12.3"
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
     "@types/node": "^15.3.0",
-    "@types/prompt-sync": "^4.1.0",
+    "prettier": "^2.3.0",
     "tslint": "^5.12.1"
   }
 }
