--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "easy-oc",
-  "version": "1.0.0",
-  "description": "Quick tool for OCP Clusters",
-  "main": "index.js",
+  "version": "0.0.2",
+  "description": "Quick tool interacting with OCP Clusters",
+  "main": "./dist/index.js",
+  "bin": {
+    "easy-oc": "./dist/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/index.js",
+    "build": "tsc",
     "format": "prettier --config .prettierrc '*.ts' --write",
     "lint": "eslint ."
   },
@@ -21,6 +25,7 @@
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
     "@types/node": "^15.3.0",
+    "@types/readline-sync": "^1.4.3",
     "prettier": "^2.3.0",
     "tslint": "^5.12.1"
   }
